# mysqlpool-cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  config.h.template  mariadb-container.sh  prepare-and-start-mariadb-with-tls.sh  vcpkg.json
.github/workflows/: ci.yaml  cmake-multi-platform.yml
cmake/: 3rdparty.cmake  install.cmake  mysqlpoolConfig.cmake.in
docker/: Dockerfile  create_certs.sh
examples/simple/: CMakeLists.txt  fun_with_sql.cpp  main.cpp
include/mysqlpool/: conf.h  logging.h  mysqlpool.h
src/: CMakeLists.txt  logging.cpp  mysqlpool.cpp
tests/: CMakeLists.txt  functional_tests.cpp  integration_tests.cpp  unit_tests.cpp
